Update config data